--- a/.autom4te.cfg
+++ b/.autom4te.cfg
@@ -14,6 +14,8 @@
 # directory within the bootstrapped directory to keep things on the
 # top directory clean.
 #
+# Copyright (C) 2015-2019 Free Software Foundation, Inc.
+#
 # Copying and distribution of this file, with or without modification,
 # are permitted in any medium without royalty provided the copyright
 # notice and this notice are preserved.  This file is offered as-is,
