--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 # To help readability, please add new files based on the length of the line
 # you wish to add.
 #
+# Copyright (C) 2015-2019 Free Software Foundation, Inc.
+#
 # Copying and distribution of this file, with or without modification,
 # are permitted in any medium without royalty provided the copyright
 # notice and this notice are preserved.  This file is offered as-is,
