--- a/bin/gnuastro.conf
+++ b/bin/gnuastro.conf
@@ -12,6 +12,8 @@
 # NOTE I:  All counting is from zero, not one.
 # NOTE II: Lines starting with `#` are ignored.
 #
+# Copyright (C) 2015-2019 Free Software Foundation, Inc.
+#
 # Copying and distribution of this file, with or without modification,
 # are permitted in any medium without royalty provided the copyright
 # notice and this notice are preserved.  This file is offered as-is,
