Addressing Debian's lintian warnings
In a recent build of Gnuastro on Debian's lintian, several warnings came up
that are fixed with this commit:

1) GFDL's invariant parts mentioned fully in `bootstrapped/README'.
2) Spelling errors in `bin/match/match.c' and `bin/mkprof/ui.c'.
3) A man-page error due to the usage of `*' in the output of help.

--- a/bin/script/sort-by-night.in
+++ b/bin/script/sort-by-night.in
@@ -54,7 +54,7 @@ EOF
 
 print_help() {
     cat <<EOF
-Usage: $scriptname [OPTION] /path/to/data/\*.fits
+Usage: $scriptname [OPTION] FITS-files
 
 This script is part of GNU Astronomy Utilities $version.
 
