Full text of GNU Free Documentation License added
Until now, we were missing the full text of the GNU FDL in the version
controlled source. The Texinfo formatted version of the GNU FDL was
included in the manual after bootstrapping from Gnulib, but not in the
version controlled source.

With this commit, following the GNU recommendation (to add the license name
in capital letters, e.g., COPYING.LESSER), the full text of the GNU FDL is
added as `COPYING.FDL'.

--- a/Makefile.am
+++ b/Makefile.am
@@ -142,8 +142,12 @@ dist_sysconf_DATA = bin/gnuastro.conf
 
 ## Files that are only distributed
 ## ===============================
-EXTRA_DIST = genauthors .dir-locals.el .version developer-build     \
-  bootstrapped/README .autom4te.cfg
+##
+## Note that `COPYING' (containing the GNU GPL) is included in the
+## distribution tarball by default in Automake, but not other license
+## files, so we have to manually add `COPYING.FDL'.
+EXTRA_DIST = COPYING.FDL genauthors .dir-locals.el .version \
+             developer-build bootstrapped/README .autom4te.cfg
 
 
 
