CosmicCalculator: find redshift based on observe wavelength
Until now the only way to specify a redshift in CosmicCalculator was to
explicitly give it with the `-z' option. But in some situations, you know
the observed wavelength of an emission line, and its rest-frame wavelength
(which can also be used to estimate the redshift).

With this commit CosmicCalculator has the new `--obsline' option where you
can feed this information about observed and rest-frame wavelengths and let
CosmicCalculator estimate the redshift from them and continue as
before. Since we aren't explicity giving the redshift, another
`--usedredshift' option has been added to CosmicCalculator to print the
used redshift with any other requested calculated value.

In order to do this, it was necessary to define a new library in Gnuastro
to keep the wavelengths and give standard names to spectral lines. That
library is now saved in `lib/speclines.c' and `lib/gnuastro/speclines.h'.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -59,9 +59,9 @@ libgnuastro_la_SOURCES = arithmetic.c arithmetic-and.c arithmetic-bitand.c \
   arithmetic-or.c arithmetic-plus.c array.c binary.c blank.c box.c         \
   checkset.c convolve.c cosmology.c data.c eps.c fits.c git.c              \
   interpolate.c jpeg.c label.c list.c match.c options.c pdf.c              \
-  permutation.c pointer.c polygon.c qsort.c dimension.c statistics.c       \
-  table.c tableintern.c threads.c tiff.c tile.c tile-internal.c timing.c   \
-  txt.c type.c wcs.c
+  permutation.c pointer.c polygon.c qsort.c dimension.c speclines.c        \
+  statistics.c table.c tableintern.c threads.c tiff.c tile.c               \
+  tile-internal.c timing.c txt.c type.c wcs.c
 
 
 
@@ -79,9 +79,10 @@ pkginclude_HEADERS = gnuastro/config.h $(headersdir)/arithmetic.h          \
   $(headersdir)/jpeg.h $(headersdir)/label.h $(headersdir)/list.h          \
   $(headersdir)/match.h $(headersdir)/pdf.h $(headersdir)/permutation.h    \
   $(headersdir)/pointer.h $(headersdir)/polygon.h $(headersdir)/qsort.h    \
-  $(headersdir)/statistics.h $(headersdir)/table.h $(headersdir)/threads.h \
-  $(headersdir)/tiff.h $(headersdir)/tile.h $(headersdir)/txt.h            \
-  $(headersdir)/type.h $(headersdir)/wcs.h
+  $(headersdir)/speclines.h $(headersdir)/statistics.h                     \
+  $(headersdir)/table.h $(headersdir)/threads.h $(headersdir)/tiff.h       \
+  $(headersdir)/tile.h $(headersdir)/txt.h $(headersdir)/type.h            \
+  $(headersdir)/wcs.h
 
 
 
