--- a/bin/table/asttable.conf
+++ b/bin/table/asttable.conf
@@ -18,3 +18,6 @@
 # permitted in any medium without royalty provided the copyright notice and
 # this notice are preserved.  This file is offered as-is, without any
 # warranty.
+
+# Inputs
+ wcshdu        1
