Table: Column arithmetic now possible
With this commit, Table now has a new feature to do arithmetic operations
on various input columns. It is activated by starting the requested column
with `arith ' and can do almost all the operations in the Arithmetic
program, along with some other operators for coordinate conversion.

To use the same infra-structure as the Arithmetic program, some
generalizations were necessary in the Arithmetic library and programs also,
but now, along with Table, there is a much more clear and robust
implementation.

--- a/bin/table/Makefile.am
+++ b/bin/table/Makefile.am
@@ -31,9 +31,9 @@ bin_PROGRAMS = asttable
 ## Reason for linking with `libgnu' described in `bin/TEMPLATE/Makefile.am'.
 asttable_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la -lgnuastro
 
-asttable_SOURCES = main.c ui.c table.c
+asttable_SOURCES = main.c ui.c arithmetic.c table.c
 
-EXTRA_DIST = main.h authors-cite.h args.h ui.h table.h
+EXTRA_DIST = main.h authors-cite.h args.h ui.h arithmetic.h table.h
 
 
 
