--- a/bin/fits/Makefile.am
+++ b/bin/fits/Makefile.am
@@ -29,7 +29,7 @@ AM_CPPFLAGS = -I\$(top_srcdir)/bootstrapped/lib -I\$(top_srcdir)/lib
 bin_PROGRAMS = astfits
 
 ## Reason for linking with `libgnu' described in `bin/TEMPLATE/Makefile.am'.
-astfits_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la -lgnuastro $(CONFIG_LDADD)
+astfits_LDADD = $(top_builddir)/bootstrapped/lib/libgnu.la -lgnuastro
 
 astfits_SOURCES = main.c ui.c extension.c fits.c keywords.c
 
